# Addis-Neuron-

./: .gitignore  AGI.md  AGI_PROJECT_DOCUMENTATION.md  AI Project- A Truly Intelligent AI.json  Groupbooster.py  README.md  docker-compose.yml  manage.py
Games/: AGI_PROJECT_DOCUMENTATION.md  Airhockey.html  Memory backup.md  docker-compose.yml  docs.py  gemini_only_responses.md
monitoring/: prometheus.yml
python_app/: Dockerfile  cerebellum.py  cognitive_synthesis_engine.py  db_interface.py  main.py  models.py  requirements.txt  test_db_interface.py  test_main_api.py  truth_recognizer.py
python_app/health/: judiciary.py  manager.py  pharmacy.py
python_app/heart/: crystallizer.py  emotion_prototypes.json  hormonal_system.py  orchestrator.py  virtual_physiology.py
python_app/soul/: axioms.py  expression_protocol.py  internal_monologue.py  orchestrator.py
rust_engine/: Cargo.toml  Dockerfile
rust_engine/logical_engine/src/: main.rs
rust_engine/src/: ace.rs  hsm.rs  lve.rs  main.rs
rust_engine/src/nlse_core/: decay_agent.rs  mod.rs  models.rs  query_engine.rs  storage_manager.rs
