[package]
name = "logical_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
petgraph = "0.6"
actix-web-prom = "0.7"
lazy_static = "1.4"
prometheus = { version = "0.13", features = ["process"] }
uuid = { version = "1.8", features = ["v7", "serde"] }
bincode = "1.3"
memmap2 = "0.9" # <-- ADDED LINE

[dev-dependencies]
tempfile = "3.10"